--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: xenial
 
 language: php
 php:
-    - master
+    - nightly
     - 8.0
     - 7.4
     - 7.3
@@ -13,7 +13,7 @@ php:
 matrix:
     fast_finish: true
     allow_failures:
-        - php: master
+        - php: nightly
 
 env:
     - LIBMEMCACHED_VERSION=1.0.18 # Debian Jessie / Ubuntu Xenial
